<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Scripty</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="please_sign_in">You only need an e-mail address, whether you have a Scripty account or not!</string>
    <string name="sign_in">Sign In</string>
    <string name="email">e-mail</string>
    <string name="ask_download_servers">You don\'t have any servers in this device. Do you want to download them from your account?</string>
    <string name="command_options_title">And now...</string>
    <string name="main_title">%1$s commands</string>
    <string name="no_servers">No servers created</string>
    <string name="upload_operations">Upload modifications</string>
    <string name="sync_db">Sync with server</string>
    <string name="sync_db_progress_title">Syncing local DB with server</string>
    <string name="sync_db_progress_message">Wait a moment please</string>
    <string name="validate_device_title">Validating device</string>
    <string name="validate_device_message">Wait a moment please</string>

    <!-- Buttons -->
    <string name="recheck">I\'ve already seen and validated my e-mail. Please check it</string>
    <string name="resend_mail">Didn\'t receive the e-mail. Please re-send it.</string>
    <string name="another_mail">Don\'t want to use that e-mail</string>

    <!-- Words -->
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="run">Run</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>

    <!-- Messages -->
    <string name="server_saved">Server successfully saved</string>
    <string name="command_saved">Command successfully saved</string>
    <string name="field_required">You have to complete this field</string>
    <string name="fix_errors">Please fix the invalid fields in order to save the server</string>
    <string name="title_activity_validation_pending_activiy">Validation pending...</string>
    <string name="drawer_open">View available servers</string>
    <string name="drawer_close">Close server list</string>
    <string name="drawer_title">Available servers</string>
    <string name="add_server">+ Add new server</string>
    <string name="delete_server">Delete current server</string>
    <string name="add_command">Add command</string>
    <string name="edit_server">Edit current server</string>
    <string name="title_activity_server">New Server</string>
    <string name="description">Description</string>
    <string name="address">Address (IP or name)</string>
    <string name="port">SSH port</string>
    <string name="username">Username (optional)</string>
    <string name="password">Password (optional)</string>
    <string name="optional_credentials_hint">If you don\'t enter username and/or password, they\'ll be asked when running a command.</string>
    <string name="title_activity_command">Command \'%1$s\'</string>
    <string name="command">Command</string>
    <string name="title_activity_command_actions">CommandActionsActivity</string>
    <string name="running">Waiting for server</string>
    <string name="successfully">Executed successfully!</string>
    <string name="logging_out">Wait while logging you out...</string>
    <string name="validation_sent">Validation e-mail already sent to %1$s</string>
    <string name="checking_validation">Checking device validation</string>
    <string name="please_wait">Please wait...</string>
    <string name="not_validated">Validation hasn\'t been received yet.</string>
    <string name="op_upload_invalid_class">Invalid class: %1$s</string>
    <string name="op_upload_invalid_operation">Invalid operation: %1$s</string>
    <string name="op_upload_not_found">Not found: %1$s - ID: %2$s</string>
    <string name="scripty_server_unreachable">Scripty server is not responding. Please try again later.</string>
    <string name="edit_command">Edit command</string>
    <string name="delete_command">Delete command</string>
    <string name="last_command_line">Done!</string>
    <string name="command_exec_error">Command interrupted on error.</string>
    <string name="title_activity_server_credentials">Server credentials</string>
    <string name="server_without_credentials">No username or password to connect to server</string>
    <string name="wrong_device_id_key">The link you pressed wasn\'t generated for this device.</string>
    <string name="account_email">e-mail address</string>
    <string name="account_info">Account information</string>
    <string name="title_activity_settings">Settings</string>
    <string name="commands_settings">Commands Settings</string>
    <string name="command_timeout">Timeout (in seconds)</string>
    <string name="app_version">Version</string>
    <string name="app_info">Application information</string>

</resources>
