<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/account_info">
        <EditTextPreference
            android:key="userEmail"
            android:title="@string/account_email"
            android:selectable="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/commands_settings">
        <EditTextPreference
            android:key="timeoutSeconds"
            android:title="@string/command_timeout"
            android:inputType="number" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/app_info">
        <EditTextPreference
            android:key="appVersion"
            android:title="@string/app_version"
            android:selectable="false" />
    </PreferenceCategory>
</PreferenceScreen>
