<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context="com.duam.scripty.activities.ValidationPendingActiviy">

    <Space
        android:layout_width="fill_parent"
        android:layout_height="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/please_sign_in"
        android:id="@+id/txtEmailSent"
        android:typeface="monospace"
        android:gravity="center" />

    <Space
        android:layout_width="fill_parent"
        android:layout_height="30dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recheck"
        android:id="@+id/btnCheckValidation" />

    <Space
        android:layout_width="fill_parent"
        android:layout_height="30dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resend_mail"
        android:id="@+id/btnResendMail" />

    <Space
        android:layout_width="fill_parent"
        android:layout_height="30dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/another_mail"
        android:id="@+id/btnUseOtherMail" />

</LinearLayout>
