<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/please_sign_in"
        android:id="@+id/textView2"
        android:typeface="monospace"
        android:gravity="center" />

    <Space
        android:layout_width="fill_parent"
        android:layout_height="20dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editEmail"
        android:hint="@string/email"
        android:focusableInTouchMode="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:id="@+id/btnSignIn"
        android:textStyle="bold" />

    <Space
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2" />
</LinearLayout>