<LinearLayout
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtCommand"
        android:textAlignment="center" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/run"
        android:id="@+id/btnRunCommand"
        android:drawableLeft="@drawable/ic_action_play"
        android:textAlignment="center" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:id="@+id/btnEditCommand"
        android:drawableLeft="@drawable/ic_action_edit"
        android:textAlignment="center" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:id="@+id/btnDeleteCommand"
        android:drawableLeft="@drawable/ic_action_discard"
        android:textAlignment="center" />

</LinearLayout>